[project]
name = "stock-agent-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "bs4>=0.0.2",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "mcp>=1.17.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "uvicorn>=0.37.0",
    "yfinance>=0.2.66",
]
